# bodyguard-hsi

plugins/: CMakeLists.txt
plugins/human/: CMakeLists.txt
plugins/human/simulator/: dynamics2d_human_model.cpp  dynamics2d_human_model.h  human_entity.cpp  human_entity.h  qtopengl_human.cpp  qtopengl_human.h
plugins/robots/e-puck/simulator/: epuck_entity.cpp  epuck_entity.h
plugins/robots/generic/: CMakeLists.txt
plugins/robots/generic/control_interface/: ci_human_sensor.cpp  ci_human_sensor.h
plugins/simulator/entities/: CMakeLists.txt  human_sensor_equipped_entity.cpp  human_sensor_equipped_entity.h
plugins/simulator/sensors/: CMakeLists.txt  human_default_sensor.cpp  human_default_sensor.h
